--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,1 +1,4 @@
 body{background-color: red;}
+h1{color: white; text-align: center;}
+p{color: green;}
+#Hub{background-color: grey; width: 750px; height: 500px;}
