--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,5 +3,5 @@ h1{color: white; text-align: center;}
 .Description{color: white;}
 #Hub{background-color: grey; width: 99vw; height: 68vh;}
 .Status{color: blue;}
-.Button{width: 150px; height: 30px; background-color: black; position: relative; color: white; text-align: center; padding-top: 10px; left: 45%; top: 50%;}
+.Button{width: 150px; height: 30px; background-color: black; position: relative; color: white; text-align: center; padding-top: 10px; left: 45vw; top: 35vh;}
 .Button:hover{background-color: brown;}
