--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -34,3 +34,4 @@ h1{color: white; text-align: center;}
 .OOBENextButtonThree:hover{background-color: brown;}
 
 .OOBESetupResults{position: relative; left: 35%; top: 25%; font-size: 16px; color: green;}
+.userPhoto(position: relative; left: 45%; top: 35%; border-radius: 5px;}
