--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 body{background-color: red;}
 h1{color: white; text-align: center;}
 .Description{color: white;}
-#Hub{background-color: grey; width: 99vw; height: 68vh;}
+#Hub{background-color: grey; width: 99vw; height: 68vh; cursor: url(cursor.gif);}
 .Status{color: blue;}
 .Button{width: 10%; height: auto; background-color: black; position: relative; color: white; text-align: center; padding-top: 1%; padding-bottom: 1%; left: 45%; top: 45%;}
 .Button:hover{background-color: brown;}
