--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,40 +1,40 @@
 body{background-color: red;}
 h1{color: white; text-align: center;}
 .Description{color: white;}
-#Hub{background-color: grey; width: 99vw; height: 68vh; cursor: url(icons\cursor.cur);}
+#Hub{position: relative; background-color: grey; width: 99vw; height: 68vh; cursor: url(../icons/cursor.cur);}
 .Status{color: blue;}
-.Button{width: 10%; height: auto; background-color: black; position: relative; color: white; text-align: center; padding-top: 1%; padding-bottom: 1%; left: 45%; top: 45%;}
+.Button{width: auto; height: auto; background-color: black; position: absolute; color: white; text-align: center; padding-top: 1%; padding-bottom: 1%; left: 45%; top: 45%;}
 .Button:hover{background-color: brown;}
 
-.OOBEHeader{position: relative; left: 40%; top: 0%; font-weight: bold; font-size: 24px;}
-.OOBEStepOne{position: relative; left: 39%; top: 90%; font-size: 20px; color: green; font-weight: bold;}
-.OOBEStepTwo{position: relative; left: 41%; top: 87%; font-size: 20px; color: green;}
-.OOBEStepThree{position: relative; left: 43%; top: 84%; font-size: 20px; color: green;}
+.OOBEHeader{position: absolute; left: 40%; top: 15%; font-weight: bold; font-size: 24px;}
+.OOBEStepOne{position: absolute; left: 39%; bottom: 10%; font-size: 20px; color: green; font-weight: bold;}
+.OOBEStepTwo{position: absolute; left: 41%; bottom: 10%; font-size: 20px; color: green;}
+.OOBEStepThree{position: absolute; left: 43%; bottom: 10%; font-size: 20px; color: green;}
 
-.OOBEFirstNameLabel{position: relative; left: 32%; top: 10%;}
-.OOBEFirstNameInput{position: relative; left: 40%; top: 5%;}
-.OOBELastNameLabel{position: relative; left: 32%; top: 10%;}
-.OOBELastNameInput{position: relative; left: 40%; top: 5%;}
-.OOBEAgeLabel{position: relative; left: 32%; top: 10%;}
-.OOBEAgeInput{position: relative; left: 40%; top: 5%;}
+.OOBEFirstNameLabel{position: absolute; left: 25%; top: 30%;}
+.OOBEFirstNameInput{position: absolute; left: 35%; top: 30%;}
+.OOBELastNameLabel{position: absolute; left: 25%; top: 45%;}
+.OOBELastNameInput{position: absolute; left: 35%; top: 45%;}
+.OOBEAgeLabel{position: absolute; left: 25%; top: 60%;}
+.OOBEAgeInput{position: absolute; left: 35%; top: 60%;}
 
-.OOBENextButton{position: relative; left: 65%; top: 45%; width: 10%; height: auto; color: white; background-color: black; text-align: center; padding-top: 1%; padding-bottom: 1%;}
+.OOBENextButton{position: absolute; left: 65%; top: 45%; width: auto; height: auto; color: white; background-color: black; text-align: center; padding-top: 1%; padding-bottom: 1%;}
 .OOBENextButton:hover{background-color: brown;}
 
-.OOBEUserPhotoText{position: relative; left: 25%; top: 25%;}
-.OOBEUserPhotoInput{position: relative; left: 40%; top: 21%;}
+.OOBEUserPhotoText{position: absolute; left: 25%; top: 30%;}
+.OOBEUserPhotoInput{position: absolute; left: 35%; top: 30%;}
 
-.OOBENextButtonTwo{position: relative; left: 65%; top: 45%; width: 10%; height: auto; color: white; background-color: black; text-align: center; padding-top: 1%; padding-bottom: 1%;}
+.OOBENextButtonTwo{position: absolute; left: 65%; top: 45%; width: auto; height: auto; color: white; background-color: black; text-align: center; padding-top: 1%; padding-bottom: 1%;}
 .OOBENextButtonTwo:hover{background-color: brown;}
 
-.OOBEBackgroundColorText{position: relative; left: 25%; top: 15%;}
-.OOBEBackgroundColorInput{position: relative; left: 40%; top: 10%;}
+.OOBEBackgroundColorText{position: absolute; left: 25%; top: 30%;}
+.OOBEBackgroundColorInput{position: absolute; left: 40%; top: 30%;}
 
-.OOBENextButtonThree{position: relative; left: 65%; top: 45%; width: 10%; height: auto; color: white; background-color: black; text-align: center; padding-top: 1%; padding-bottom: 1%;}
+.OOBENextButtonThree{position: absolute; left: 65%; top: 45%; width: auto; height: auto; color: white; background-color: black; text-align: center; padding-top: 1%; padding-bottom: 1%;}
 .OOBENextButtonThree:hover{background-color: brown;}
 
-.OOBESetupResults{position: relative; left: 35%; top: 25%; font-size: 16px; color: green;}
-.userPhoto{position: relative; left: 45%; top: 35%; border-radius: 5px;}
+.OOBESetupResults{position: absolute; left: 35%; top: 25%; font-size: 16px; color: green;}
+.userPhoto{position: absolute; left: 45%; top: 35%; border-radius: 5px;}
 
-.GotoLockscreenButton{position: relative; left: 35%; top: 65%; width: 30%; height: auto; color: white; background-color: black; text-align: center; padding-top: 1%; padding-bottom: 1%;}
+.GotoLockscreenButton{position: absolute; left: 35%; top: 65%; width: auto; height: auto; color: white; background-color: black; text-align: center; padding-top: 1%; padding-bottom: 1%;}
 .GotoLockscreenButton:hover{background-color: brown;}
