--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,15 +1,15 @@
 body{background-color: red;}
 h1{color: white; text-align: center;}
 .Description{color: white;}
-#Hub{position: relative; background-color: grey; width: 99vw; height: 68vh; cursor: url(../icons/cursor.cur), auto;}
-.Status{color: blue;}
+#Hub{position: absolute; background-color: grey; width: 99%; height: 68%; cursor: url(../icons/cursor.cur), auto;}
+.Status{position: relative; color: blue;}
 .Button{width: auto; height: auto; background-color: black; position: absolute; color: white; text-align: center; padding-top: 1%; padding-bottom: 1%; left: 45%; top: 45%;}
 .Button:hover{background-color: brown;}
 
-.OOBEHeader{position: absolute; left: 40%; top: 15%; font-weight: bold; font-size: 24px;}
-.OOBEStepOne{position: absolute; left: 39%; bottom: 10%; font-size: 20px; color: green; font-weight: bold;}
-.OOBEStepTwo{position: absolute; left: 41%; bottom: 10%; font-size: 20px; color: green;}
-.OOBEStepThree{position: absolute; left: 43%; bottom: 10%; font-size: 20px; color: green;}
+.OOBEHeader{position: absolute; left: 40%; top: 15%; font-weight: bold; font-size: 24pt;}
+.OOBEStepOne{position: absolute; left: 39%; bottom: 10%; font-size: 20pt; color: green; font-weight: bold;}
+.OOBEStepTwo{position: absolute; left: 41%; bottom: 10%; font-size: 20pt; color: green;}
+.OOBEStepThree{position: absolute; left: 43%; bottom: 10%; font-size: 20pt; color: green;}
 
 .OOBEFirstNameLabel{position: absolute; left: 25%; top: 30%;}
 .OOBEFirstNameInput{position: absolute; left: 35%; top: 30%; cursor: url(../icons/textCursor.cur), auto;}
@@ -33,7 +33,7 @@ h1{color: white; text-align: center;}
 .OOBENextButtonThree{position: absolute; left: 65%; top: 45%; width: auto; height: auto; color: white; background-color: black; text-align: center; padding-top: 1%; padding-bottom: 1%;}
 .OOBENextButtonThree:hover{background-color: brown;}
 
-.OOBESetupResults{position: absolute; left: 35%; top: 25%; font-size: 16px; color: green;}
+.OOBESetupResults{position: absolute; left: 35%; top: 25%; font-size: 16pt; color: green;}
 .userPhoto{position: absolute; left: 45%; top: 35%; border-radius: 5px;}
 
 .GotoLockscreenButton{position: absolute; left: 35%; top: 65%; width: auto; height: auto; color: white; background-color: black; text-align: center; padding-top: 1%; padding-bottom: 1%;}
